[package]
name = "archtry"
version = "1.0.3"
edition = "2024"
license = "GPL"
description = "Arch Linux Installation Simulator"
repository = "https://github.com/6z7y/archtry"
keywords = ["arch", "linux", "simulator", "educational", "cli"]
categories = ["command-line-utilities"]

[dependencies]
colored = "3.0"
dialoguer = "0.11"
indicatif = "0.17"
rpassword = "7.3"
termios = "0.3.3"
